# daftprompt

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOP.md  README.md
crates/daftprompt-indexer/: Cargo.toml
crates/daftprompt-indexer/src/: code.rs  db.rs  documents.rs  embed.rs  lib.rs
crates/sugacode-indexer/: Cargo.toml
crates/sugacode-indexer/src/: code.rs  db.rs  lib.rs  schema.sql
epics/: 001-text-explorer-ui-prototype.md  002-git-log-column.md  003-git-log-indexing.md  004-code-indexer.md  005-migrate-to-akar-ui.md  006-refactor-data-items-and-lists.md  007-document-indexing-and-unified-search.md  008-code-indexer-test-foundation.md
src/: git_log.rs  input.rs  main.rs  renderer.rs  state.rs
src/ui/: adapter.rs  canvas.rs  card.rs  container.rs  drawer.rs  mod.rs  render.rs  search.rs
