[package]
name = "text-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "29.0.0"
winit = "0.30.12"
glyphon = { path = "../glyphon" }
glam = { path = "../glam-rs" }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
bytemuck = "1.19"
gix = { path = "../gitoxide/gix", default-features = false, features = ["basic", "sha1"] }
clap = { version = "4", features = ["derive"] }
