[workspace]
members = [".", "crates/daftprompt-indexer"]

[package]
name = "daftprompt"
version = "0.1.0"
edition = "2021"

[dependencies]
akar-core = { path = "../akar/crates/akar-core" }
akar-layout = { path = "../akar/crates/akar-layout" }
akar-components = { path = "../akar/crates/akar-components" }
akar-winit = { path = "../akar/crates/akar-winit" }
wgpu = "29.0.0"
winit = "0.30.12"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
glam = { path = "../glam-rs" }
gix = { path = "../gitoxide/gix", default-features = false, features = ["basic", "sha1"] }
clap = { version = "4", features = ["derive"] }
daftprompt-indexer = { path = "crates/daftprompt-indexer" }
anyhow = "1"
serde_json = "1"
png = "0.17"

[profile.dev]
debug = 0
incremental = true
codegen-units = 256

[profile.dev.package."*"]
debug = 0
opt-level = 0
