[package]
name = "daftprompt-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
model2vec-rs = "0.2.1"
sqlite-vec = "0.0.1-alpha.33"
rusqlite = { version = "0.31", features = ["bundled"] }
zerocopy = "0.7"
anyhow = "1"
dirs = "5"
serde_json = "1"
log = "0.4"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = "0.4"
gix = { path = "../../../gitoxide/gix", default-features = false, features = ["basic", "sha1"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
